# dluxparser

./: .travis.yml  README.md  README.rst  requirements.txt  setup.cfg
cmd/: log2json.py  main.py  shrinker.py
dluxparser/: csv2json.py  log2json.py  shrinker.py  text2json.py
etc/: Vagrantfile  post_install.sh
