# Setuptools & pbr is used to facilitate packaging, dependency, & installation
# of Python projects and its dependencies.

[metadata]
name = dluxparser
version = 1.0.0
summary = Python CLI to parse a file into a different format (eg. excel2json)
description-file = README.rst
author = Luz Cazares
author_email = tmp@dlux.com
home-page  = https://github.com/dlux/dluxparser
test_suite = tests
keywords =
    parser
    parsertojson
classifier = 
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Quality Engineers
    Intended Audience :: Information Technology
    License :: Free For Educational Use
    Operating System :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages = 
    dluxparser

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[entry_points]
console_scripts =
    dluxparser = dluxparser.main:main
dluxparser.cm =
    shrinker = dluxparser.shrinker:CliffShrinker
    log2json = dluxparser.log2json:CliffLog2Json
    csv2json = dluxparser.csv2json:CliffCsv2Json

